Extract CSS into separate files

--- a/printwine.html
+++ b/printwine.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mini WineJS</title>
-  <style>
-    body { font-family: monospace; padding: 20px; }
-    #output { border: 1px solid #ccc; padding: 10px; white-space: pre-wrap; height: 200px; overflow-y: auto; }
-  </style>
+  <link rel="stylesheet" href="printwine.css">
 </head>
 <body>
   <h1>Mini WineJS Browser Demo</h1>
