--- a/winecliandgui.html
+++ b/winecliandgui.html
@@ -3,12 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Hybrid WineJS</title>
-<style>
-  body { font-family: monospace; }
-  #consoleOutput { border: 1px solid #333; padding: 5px; height: 100px; overflow-y: auto; white-space: pre-wrap; margin-bottom:10px;}
-  #canvasContainer { position: relative; border: 1px solid #333; height:400px; }
-  canvas { position: absolute; }
-</style>
+<link rel="stylesheet" href="winecliandgui.css">
 </head>
 <body>
 <h1>Hybrid WineJS</h1>
