--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
   </main>
 
-  <script src="emulator.js"></script>
-  <script src="index.js"></script>
+  <script type="module" src="emulator.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
